Fix "Show folders, tabs, and window state from last time" feature

We were using the DBus interface before declaring it, oops.

BUG: 422300
FIXED-IN: 20.08.0